--- a/navela/templates/home.html
+++ b/navela/templates/home.html
@@ -8,7 +8,7 @@
      {% if request.user.is_authenticated %}
     <h4>
     {{ user.username | upper }}, bienvenido 🫦
-        <br> NO TIENES CITAS EL DÍA DE HOY
+        <br> NO TIENES CITAS EL DÍA DE HOY, TAMPOCO MAÑANA
     </h4>
     {% else %}
         <h4>No estás logeado</h4>
