Mensaje naco en el home

--- a/navela/templates/home.html
+++ b/navela/templates/home.html
@@ -9,6 +9,7 @@
     <h4>
     {{ user.username | upper }}, bienvenido 🫦
         <br> NO TIENES CITAS EL DÍA DE HOY, TAMPOCO MAÑANA
+        <br> Naco
     </h4>
     {% else %}
         <h4>No estás logeado</h4>
